добавлен jwt модуль

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ DB_HOST=mysql
 DB_PORT=3306
 TIMEZONE=Europe/Moscow
 DB_CONNECTION=mysql:host=${DB_HOST}:${DB_PORT};dbname=${MYSQL_DATABASE}
+
+JWT_KEY=knkLKKkdsgnqfmkgwKNr3u2ioUNK66YGUK
