добавлен переменные окружения для модуля jwt

--- a/.env
+++ b/.env
@@ -10,4 +10,8 @@ DB_PORT=3306
 TIMEZONE=Europe/Moscow
 DB_CONNECTION=mysql:host=${DB_HOST}:${DB_PORT};dbname=${MYSQL_DATABASE}
 
-JWT_KEY=knkLKKkdsgnqfmkgwKNr3u2ioUNK66YGUK
+JWT_KEY=secret
+JWT_ISSUER=https://api.example.com
+JWT_AUDIENCE=https://frontend.example.com
+JWT_ID=UNIQUE-JWT-IDENTIFIER
+JWT_EXPIRE=3000
